<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modbus_master</name>
  <version>0.1.0</version>
  <description>Modbus RTU/TCP client: connection, batch read/write, register decode. No ros2_control; used by modbus_hw_interface.</description>
  <maintainer email="ruslan98mambetov@gmail.com">Ruslan Mambetov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libmodbus-dev</depend>
  <depend>modbus_slave_plugins</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
