<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modbus_ros2_control_examples</name>
  <version>0.1.0</version>
  <description>Example config, description (URDF/xacro) and launch files for modbus_hw_interface.</description>
  <maintainer email="ruslan98mambetov@gmail.com">Ruslan Mambetov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>modbus_hw_interface</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
