<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modbus_slave_interface</name>
  <version>0.1.0</version>
  <description>Modbus slave interface: ModbusSlaveInterface base class, ModbusDeviceConfig, batch_group, modbus_types. Plugins (modbus_slave_plugins) implement this interface.</description>
  <maintainer email="ruslan98mambetov@gmail.com">Ruslan Mambetov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
